<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_screen"
    android:weightSum="1"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/backgroundvertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.2"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/title"
            android:text="@string/app_name"/>
        <Button
            android:id="@+id/aplayer"
            style="@style/button"
            android:text="@string/a_player" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficulty">
            <RadioButton
                android:id="@+id/easy"
                android:text="@string/easy"
                style="@style/radio"/>
            <RadioButton
                android:id="@+id/normal"
                android:text="@string/normal"
                style="@style/radio"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/difficult"
                android:text="@string/difficult"
                style="@style/radio"/>
        </RadioGroup>
        <Button
            android:id="@+id/two_players"
            style="@style/button"
            android:text="@string/another_player" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.5"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:id="@+id/grid"
        >

        <ImageView
            android:id="@+id/a1"
            style="@style/box" />
        <ImageView
            android:id="@+id/a2"
            style="@style/box" />
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/cross"
            style="@style/box" />
        <ImageView
            android:id="@+id/b1"
            style="@style/box" />
        <ImageView
            android:id="@+id/b2"
            style="@style/box"
            android:src="@drawable/circle"/>
        <ImageView
            android:id="@+id/b3"
            style="@style/box" />
        <ImageView
            android:id="@+id/c1"
            android:src="@drawable/circle"
            style="@style/box" />
        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/cross"
            style="@style/box" />
        <ImageView
            android:id="@+id/c3"
            style="@style/box" />



    </GridLayout>

</LinearLayout>